src/test/ui/const-generics/unused-substs/unused-substs-2.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/unused-substs-2.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0308]: mismatched types
  --> $DIR/unused-substs-2.rs:24:9
   |
LL |     t = foo;
   |         ^^^ cyclic type of infinite size

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
